tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_11.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := r;
               r := (~ ((- 200) < 1223));
               r := (y <= (x MOD y));
               p := ((+ 200) # y);
               q := ((- x) = (- ((0 + y) - x)));
               p := (((y MOD 1223) - (200 - x)) = (- 1));
               r := (1 < (1223 DIV (- 0)));
               y := 2;
               q := ((((x - 200) >= x) & r) & (y >= (+ (x DIV y))));
  (* error *)  r := ((((+ r) MOD 200) DIV ((- y) + (200 * 2))) = ((2 * 200) * x))
END Test20.